Update resume with language proficiency and work experience

--- a/index.html
+++ b/index.html
@@ -121,7 +121,6 @@
           <li><a class="nav-link" href="#resume">Resume</a></li>
           <li><a class="nav-link" href="#portfolio">Portfolio</a></li>
           <li><a class="nav-link" href="#contact">Contact</a></li>
-          <li><a class="nav-link" href="https://www.haozheli.cn">简体中文</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
         
@@ -463,12 +462,12 @@
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-coding">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/cs128-preview1.webp" class="img-fluid" alt="poster">
+            <img src="assets/img/portfolio/aimusic-preview1.webp" class="img-fluid" alt="poster">
             <div class="portfolio-info">
-              <h4>CS 128 Machine Problem</h4>
+              <h4>Music Generation using Hugging Face API</h4>
               <p>Coding</p>
               <div class="portfolio-links">
-                <a href="portfolio-cs128.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details">See More <i class="fa-solid fa-arrow-right"></i></a>
+                <a href="portfolio-aimusic.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details">See More <i class="fa-solid fa-arrow-right"></i></a>
               </div>
             </div>
           </div>
@@ -731,9 +730,15 @@
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
-
-    
-    <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+  <!-- ConveyThis: https://www.conveythis.com/   -->
+  <script src="//cdn.conveythis.com/javascript/conveythis-initializer.js"></script>
+  <script type="text/javascript">
+    document.addEventListener("DOMContentLoaded", function(e) {
+      ConveyThis_Initializer.init({
+        api_key: "pub_7f83c8be19d2cc9cd13ad19fe9950745"
+      });
+    });
+  </script>
 
 </body>
 
