--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@
         <a href="https://space.bilibili.com/421778349?spm_id_from=333.1007.0.0" class="bilibili"><i class="fa-brands fa-bilibili"></i></a>
         <a href="https://v.douyin.com/iDQXrmM/" class="tiktok"><i class="fa-brands fa-tiktok"></i></a>
         <a href="https://www.strava.com/athletes/haozheli" class="Strava"><i class="fa-brands fa-strava"></i></a>
+        <a href="https://twitter.com/HaozheLiiii" class="X"><i class="fa-brands fa-x-twitter"></i></a>
       </div>
 
       <!-- Pop Up element -->
@@ -172,7 +173,7 @@
                 <li><i class="bi bi-chevron-right"></i> <strong>Name:</strong> <span>Haozhe Li</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>16 April 2004</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span><a href="https://www.haozheli.com">haozheli.com</a></span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span><a href="sms:+1217 693 8436">+1 217 693 8436</a></span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Calendar</strong> <span><a href="https://calendly.com/haozheli04/meeting-with-haozhe">Schedule A Meeting</a></span></li>
               </ul>
             </div>
             <div class="col-lg-6">
@@ -259,9 +260,9 @@
           </div>
 
           <div class="progress">
-            <span class="skill">ML <i class="val">30%</i></span>
+            <span class="skill">LLM<i class="val">80%</i></span>
             <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
+              <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
           </div>
 
@@ -640,6 +641,7 @@
               <a href="https://space.bilibili.com/421778349?spm_id_from=333.1007.0.0" class="bilibili"><i class="fa-brands fa-bilibili"></i></a>
               <a href="https://v.douyin.com/iDQXrmM/" class="tiktok"><i class="fa-brands fa-tiktok"></i></a>
               <a href="https://www.strava.com/athletes/haozheli" class="Strava"><i class="fa-brands fa-strava"></i></a>
+              <a href="https://twitter.com/HaozheLiiii" class="X"><i class="fa-brands fa-x-twitter"></i></a>
             </div>
           </div>
         </div>
@@ -653,9 +655,9 @@
         </div>
         <div class="col-md-6 mt-4 d-flex align-items-stretch">
           <div class="info-box">
-            <i class="bx bx-phone-call"></i>
-            <h3>Call Me</h3>
-            <p><a href="sms:+1217 693 8436">+1 217 693 8436</a></p>
+            <i class="bx bx-calendar"></i>
+            <h3>Calendar</h3>
+            <p><a href="https://calendly.com/haozheli04/meeting-with-haozhe">Schedule A Meeting</a></p>
           </div>
         </div>
       </div>
