Update social media links and remove WeChat popup

--- a/index.html
+++ b/index.html
@@ -131,7 +131,9 @@
         <a href="https://www.instagram.com/haozheli04/" class="instagram"><i class="fa-brands fa-instagram"></i></a>
         <a href="https://www.linkedin.com/in/haozheli" class="linkedin"><i class="fa-brands fa-linkedin"></i></a>
         <a href="https://www.youtube.com/channel/UCBI1IZM1HK6PP9COneQXpog" class="youtube"><i class="fa-brands fa-youtube"></i></a>
+        <!--Delete wechat popup
         <a href="#" class="weixin" onclick="showPopup('assets/img/weixin-qr.webp'); return false;"><i class="fa-brands fa-weixin"></i></a>
+        -->
         <a href="https://space.bilibili.com/421778349?spm_id_from=333.1007.0.0" class="bilibili"><i class="fa-brands fa-bilibili"></i></a>
         <a href="https://v.douyin.com/iDQXrmM/" class="tiktok"><i class="fa-brands fa-tiktok"></i></a>
         <a href="https://www.strava.com/athletes/haozheli" class="Strava"><i class="fa-brands fa-strava"></i></a>
@@ -139,10 +141,12 @@
       </div>
 
       <!-- Pop Up element -->
+      <!--
       <div id="popup">
         <span id="closeBtn" onclick="closePopup()"><i class="fa-solid fa-circle-xmark"></i></span>
         <img src="" alt="Pop up QR code">
-      </div>    
+      </div> 
+      -->   
 
     </div>
   </header><!-- End Header -->
@@ -637,7 +641,9 @@
               <a href="https://www.instagram.com/haozheli04/" class="instagram"><i class="fa-brands fa-instagram"></i></a>
               <a href="https://www.linkedin.com/in/haozheli" class="linkedin"><i class="fa-brands fa-linkedin"></i></a>
               <a href="https://www.youtube.com/channel/UCBI1IZM1HK6PP9COneQXpog" class="youtube"><i class="fa-brands fa-youtube"></i></a>
+              <!--Delete wechat popup
               <a href="#" class="weixin" onclick="showPopup('assets/img/weixin-qr.webp'); return false;"><i class="fa-brands fa-weixin"></i></a>
+              -->
               <a href="https://space.bilibili.com/421778349?spm_id_from=333.1007.0.0" class="bilibili"><i class="fa-brands fa-bilibili"></i></a>
               <a href="https://v.douyin.com/iDQXrmM/" class="tiktok"><i class="fa-brands fa-tiktok"></i></a>
               <a href="https://www.strava.com/athletes/haozheli" class="Strava"><i class="fa-brands fa-strava"></i></a>
