--- a/index.html
+++ b/index.html
@@ -215,21 +215,21 @@
 
         <div class="col-lg-3 col-md-6">
           <div class="count-box">
-            <span data-purecounter-start="0" data-purecounter-end="3" data-purecounter-duration="1" class="purecounter"></span>
-            <p>Machine Projects</p>
+            <span data-purecounter-start="0" data-purecounter-end="5" data-purecounter-duration="1" class="purecounter"></span>
+            <p>Projects</p>
           </div>
         </div>
 
         <div class="col-lg-3 col-md-6 mt-5 mt-md-0">
           <div class="count-box">
-            <span data-purecounter-start="0" data-purecounter-end="113" data-purecounter-duration="1" class="purecounter"></span>
+            <span data-purecounter-start="0" data-purecounter-end="141" data-purecounter-duration="1" class="purecounter"></span>
             <p>Creations</p>
           </div>
         </div>
 
         <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
           <div class="count-box">
-            <span data-purecounter-start="0" data-purecounter-end="1600000" data-purecounter-duration="1" class="purecounter"></span>
+            <span data-purecounter-start="0" data-purecounter-end="1700000" data-purecounter-duration="1" class="purecounter"></span>
             <p>Views</p>
           </div>
         </div>
@@ -289,7 +289,7 @@
         <div class="col-lg-6">
 
           <div class="progress">
-            <span class="skill">HTML / CSS <i class="val">60%</i></span>
+            <span class="skill">Full Stack <i class="val">60%</i></span>
             <div class="progress-bar-wrap">
               <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
@@ -640,9 +640,9 @@
 
         <div class="col-md-6 d-flex align-items-stretch">
           <div class="info-box">
-            <i class="bx bx-map"></i>
-            <h3>My Address</h3>
-            <p>210S 4th St, Bldg-2-307, Champaignm, Illinois</p>
+            <i class="bx bx-envelope"></i>
+            <h3>Email Me</h3>
+            <p><a href="mailto:mail@haozheli.com">mail@haozheli.com</a></p>
           </div>
         </div>
 
@@ -665,22 +665,6 @@
             </div>
           </div>
         </div>
-
-        <div class="col-md-6 mt-4 d-flex align-items-stretch">
-          <div class="info-box">
-            <i class="bx bx-envelope"></i>
-            <h3>Email Me</h3>
-            <p><a href="mailto:mail@haozheli.com">mail@haozheli.com</a></p>
-          </div>
-        </div>
-        <div class="col-md-6 mt-4 d-flex align-items-stretch">
-          <div class="info-box">
-            <i class="bx bx-calendar"></i>
-            <h3>Calendar</h3>
-            <p><a href="https://calendly.com/haozheli04/meeting-with-haozhe">Schedule A Meeting</a></p>
-          </div>
-        </div>
-      </div>
 
       <form action="https://formspree.io/f/mzbqbwod" method="post" role="form" class="php-email-form mt-4">
         <div class="row">
