chore: Update .gitignore to ignore .DS_Store files in assets/img directory

--- a/index.html
+++ b/index.html
@@ -455,6 +455,20 @@
       <div class="row portfolio-container">
         <div class="col-lg-4 col-md-6 portfolio-item filter-coding filter-design">
           <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/contactflask-preview2.webp" class="img-fluid" alt="poster">
+            <div class="portfolio-info">
+              <h4>Contact Flask</h4>
+              <p>Coding, Design</p>
+              <div class="portfolio-links">
+                <a href="portfolio-contactflask.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details">See More <i class="fa-solid fa-arrow-right"></i></a>
+              </div>
+            </div>
+          </div>
+      </div>
+
+      <div class="row portfolio-container">
+        <div class="col-lg-4 col-md-6 portfolio-item filter-coding filter-design">
+          <div class="portfolio-wrap">
             <img src="assets/img/portfolio/detect-preview1.webp" class="img-fluid" alt="poster">
             <div class="portfolio-info">
               <h4>Similarity Detector</h4>
@@ -492,19 +506,6 @@
           </div>
         </div>
 
-        <div class="col-lg-4 col-md-6 portfolio-item filter-coding filter-music">
-          <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/mus105-preview1.webp" class="img-fluid" alt="poster">
-            <div class="portfolio-info">
-              <h4>MUS 105 Machine Project</h4>
-              <p>Coding, Music</p>
-              <div class="portfolio-links">
-                <a href="portfolio-mus105.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details">See More <i class="fa-solid fa-arrow-right"></i></a>
-              </div>
-            </div>
-          </div>
-        </div>
-
         <div class="col-lg-4 col-md-6 portfolio-item filter-coding">
           <div class="portfolio-wrap">
             <img src="assets/img/portfolio/cs124-preview2.webp" class="img-fluid" alt="poster">
@@ -513,19 +514,6 @@
               <p>Coding</p>
               <div class="portfolio-links">
                 <a href="portfolio-cs124.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details">See More <i class="fa-solid fa-arrow-right"></i></a>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-4 col-md-6 portfolio-item filter-coding filter-design">
-          <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/ai-preview1.webp" class="img-fluid" alt="poster">
-            <div class="portfolio-info">
-              <h4>AI on Haozheli.com</h4>
-              <p>Coding, Design</p>
-              <div class="portfolio-links">
-                <a href="portfolio-ai.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details">See More <i class="fa-solid fa-arrow-right"></i></a>
               </div>
             </div>
           </div>
