--- a/index.html
+++ b/index.html
@@ -9,24 +9,6 @@
   <meta content="Haozheli's personal website, my bio and works" name="description">
   <meta content="haozheli, Haozhe Li, 李浩哲, lihaozhe, Personal Website" name="keywords">
 
-  <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
-  <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
-  <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
-  <link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
-  <link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
-  <link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
-  <link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
-  <link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
-  <link rel="icon" type="image/png" sizes="192x192"  href="/android-icon-192x192.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-  <link rel="manifest" href="/manifest.json">
-  <meta name="msapplication-TileColor" content="#ffffff">
-  <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
-  <meta name="theme-color" content="#ffffff">
-
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
   <script src="https://kit.fontawesome.com/6db6799e59.js" crossorigin="anonymous"></script>
@@ -607,7 +589,7 @@
           <textarea class="form-control" name="message" rows="5" placeholder="Message" id="message" required></textarea>
         </div>
         <div class="my-3">
-          <input type="checkbox" name="agree" value="agree" required> I have read and agree to the <a href="https://www.termsfeed.com/live/e4ef04eb-ec4f-4423-849e-33bec5571a03" target="_blank">Privacy Policy</a>
+          <input type="checkbox" name="agree" value="agree" class="form-control" required> I have read and agree to the <a href="privacy.html" target="_blank">Privacy Policy</a>
           <div id="mail-status" class="text-center"></div>
         </div>
         <div class="text-center"><button type="submit">Send Message</button></div>
