--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
+  <!-- Favicons -->
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+
   <!-- Vercel Analysis -->
   <script>
     window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
@@ -589,7 +595,7 @@
           <textarea class="form-control" name="message" rows="5" placeholder="Message" id="message" required></textarea>
         </div>
         <div class="my-3">
-          <input type="checkbox" name="agree" value="agree" class="form-control" required> I have read and agree to the <a href="privacy.html" target="_blank">Privacy Policy</a>
+          <input type="checkbox" name="agree" value="agree"required> I have read and agree to the <a href="privacy.html" target="_blank">Privacy Policy</a>
           <div id="mail-status" class="text-center"></div>
         </div>
         <div class="text-center"><button type="submit">Send Message</button></div>
