chore: Update contact form in index.html

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   <header id="header">
     <div class="container">
       
-      <h1><a href="index.html">Haozhe Li</a></h1>
+      <h1><a href="index.html">Haozhe Li.</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
       <h2>I'm a <span>Student</span>, <span>Innovator</span>, <span>Runner</span> and <span> Filmmaker</span></h2>
@@ -595,7 +595,8 @@
           <textarea class="form-control" name="message" rows="5" placeholder="Message" id="message" required></textarea>
         </div>
         <div class="my-3">
-          <input type="checkbox" name="agree" value="agree"required> I have read and agree to the <a href="privacy.html" target="_blank">Privacy Policy</a>
+          <input type="checkbox" name="agree" value="agree"required> I have read and agree to the <a href="privacy.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details">Privacy Policy</a>
+        </div>
           <div id="mail-status" class="text-center"></div>
         </div>
         <div class="text-center"><button type="submit">Send Message</button></div>
