--- a/index.html
+++ b/index.html
@@ -595,7 +595,7 @@
           <textarea class="form-control" name="message" rows="5" placeholder="Message" id="message" required></textarea>
         </div>
         <div class="my-3">
-          <input type="checkbox" name="agree" value="agree"required> I have read and agree to the <a href="privacy.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details">Privacy Policy</a>
+          <input type="checkbox" name="agree" value="agree"required> I have read and agree to the <a href="privacy.html" target="_blank">Privacy Policy</a>
         </div>
           <div id="mail-status" class="text-center"></div>
         </div>
