Update website links to use new domain name

--- a/404.html
+++ b/404.html
@@ -49,7 +49,7 @@ Author URL: http://w3layouts.com
                 </div>
 
                 <div class="copy-right text-center">
-                    <p>© <span id="currentYear"> <a href="https://www.haozheli.com" target="_blank">Haozhe Li</a>. All rights reserved | Design by
+                    <p>© <span id="currentYear"> <a href="https://www.haozhe.li" target="_blank">Haozhe Li</a>. All rights reserved | Design by
                         <a href="http://w3layouts.com/" target="_blank">W3layouts</a></p>
                 </div>
             </div>
