--- a/portfolio-davinci.html
+++ b/portfolio-davinci.html
@@ -101,7 +101,7 @@
     <!-- Licensing information: https://bootstrapmade.com/license/ -->
     <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/personal-free-resume-bootstrap-template/ -->
     <a id="SwitchLanguage"></a><br>
-    &copy <script>document.write(new Date().getFullYear());</script> <a href="https://www.haozheli.com" target="_blank">Haozhe Li</a>. All rights reserved | Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+    &copy <script>document.write(new Date().getFullYear());</script> <a href="https://www.haozhe.li" target="_blank">Haozhe Li</a>. All rights reserved | Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
   </div>
 
   <!-- Vendor JS Files -->
