--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   <header id="header">
     <div class="container">
       
-      <h1><a href="index.html">Haozhe Li.</a></h1>
+      <h1><a href="index.html">Haozhe.Li</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
       <h2>I'm a <span>Student</span>, <span>Innovator</span>, <span>Runner</span> and <span> Filmmaker</span></h2>
@@ -118,7 +118,7 @@
               <ul>
                 <li><i class="bi bi-chevron-right"></i> <strong>Name:</strong> <span>Haozhe Li</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>16 April 2004</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span><a href="https://www.haozheli.com">haozheli.com</a></span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span><a href="https://www.haozhe.li">haozhe.li</a></span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Calendar</strong> <span><a href="https://calendly.com/haozheli04/meeting-with-haozhe">Schedule A Meeting</a></span></li>
               </ul>
             </div>
@@ -610,7 +610,7 @@
     <!-- You can delete the links only if you purchased the pro version. -->
     <!-- Licensing information: https://bootstrapmade.com/license/ -->
     <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/personal-free-resume-bootstrap-template/ -->
-    &copy <script>document.write(new Date().getFullYear());</script> <a href="https://www.haozheli.com" target="_blank">Haozhe Li</a>. All rights reserved | Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+    &copy <script>document.write(new Date().getFullYear());</script> <a href="https://www.haozhe.li" target="_blank">Haozhe Li</a>. All rights reserved | Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
   </div>
 
 
