chore: Update page title in index.html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Haozhe Li - Website</title>
+  <title>Haozhe.Li</title>
   <meta content="Haozheli's personal website, my bio and works" name="description">
   <meta content="haozheli, Haozhe Li, 李浩哲, lihaozhe, Personal Website" name="keywords">
 
