--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
               <ul>
                 <li><i class="bi bi-chevron-right"></i> <strong>Name:</strong> <span>Haozhe Li</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>16 April 2004</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span><a href="https://www.haozhe.li">haozhe.li</a></span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span><a href="https://haozhe.li">haozhe.li</a></span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Calendar</strong> <span><a href="https://calendly.com/haozheli04/meeting-with-haozhe">Schedule A Meeting</a></span></li>
               </ul>
             </div>
@@ -609,7 +609,7 @@
     <!-- You can delete the links only if you purchased the pro version. -->
     <!-- Licensing information: https://bootstrapmade.com/license/ -->
     <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/personal-free-resume-bootstrap-template/ -->
-    &copy <script>document.write(new Date().getFullYear());</script> <a href="https://www.haozhe.li" target="_blank">Haozhe Li</a>. All rights reserved | Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+    &copy <script>document.write(new Date().getFullYear());</script> <a href="https://haozhe.li" target="_blank">Haozhe Li</a>. All rights reserved | Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
   </div>
 
 
