--- a/portfolio-website.html
+++ b/portfolio-website.html
@@ -84,7 +84,7 @@
             <ul>
               <li><strong>Category</strong>: Website Design</li>
               <li><strong>Project date</strong>: In Progress</li>
-              <li><strong>Project URL</strong>: <a href="https://www.haozhe.li" target="_blank">haozheli.com</a></li>
+              <li><strong>Project URL</strong>: <a href="https://haozhe.li" target="_blank">haozheli.com</a></li>
             </ul>
 
             <p>
@@ -105,7 +105,7 @@
     <!-- Licensing information: https://bootstrapmade.com/license/ -->
     <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/personal-free-resume-bootstrap-template/ -->
     <a id="SwitchLanguage"></a><br>
-    &copy <script>document.write(new Date().getFullYear());</script> <a href="https://www.haozhe.li" target="_blank">Haozhe Li</a>. All rights reserved | Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+    &copy <script>document.write(new Date().getFullYear());</script> <a href="https://haozhe.li" target="_blank">Haozhe Li</a>. All rights reserved | Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
   </div>
 
   <!-- Vendor JS Files -->
