chore: Update language options in privacy.html

--- a/privacy.html
+++ b/privacy.html
@@ -134,8 +134,8 @@
 <div class="tab-content translations-content-item en visible" id="en">
 <h1>Privacy Policy</h1>
 <select>
-    <option value="privacy.html">English</option>
-    <option value="https://haozhe-li.translate.goog/privacy.html?_x_tr_sl=en&_x_tr_tl=zh-CN&_x_tr_hl=en&_x_tr_pto=wapp">中文</option>
+    <option value="privacy.html" selected>English</option>
+    <option value="privacy-zh.html">中文</option>
 </select>
 <script>
     document.querySelector("select").addEventListener("change", function() {
