--- a/index.html
+++ b/index.html
@@ -332,29 +332,29 @@
       <div class="section-title">
         <h2>Resume</h2>
         <p>Check My Resume</p>
+        <h5>Choose your language or <a id="resume-url" href="resume/Resume.pdf">Download Resume</a></h5>
+          <select id="language-selector">
+            <option value="en" selected>English</option>
+            <option value="zh">中文</option>
+          </select>
       </div>
 
       <div class="row mt-2">
-
-        <div class="col-md-6 d-flex align-items-stretch">
-          <div class="info-box">
-            <h3>English</h3>
-            <p>Please choose your format: </p>
-            <p><a href="resume/Resume.html">HTML</a></p>
-            <p><a href="resume/Resume.pdf">PDF</a></p>
-            <p><a href="resume/Resume.md">MarkDown</a></p>
-          </div>
-        </div>
-
-        <div class="col-md-6 mt-4 mt-md-0 d-flex align-items-stretch">
-          <div class="info-box">
-            <h3>中文</h3>
-            <p>请选择格式：</p>
-            <p><a href="resume/Resume-zh.html">HTML</a></p>
-            <p><a href="resume/Resume-zh.pdf">PDF</a></p>
-            <p><a href="resume/Resume-zh.md">MarkDown</a></p>
-          </div>
-        </div>
+        <script>
+          document.getElementById('language-selector').addEventListener('change', function(event) {
+            const language = event.target.value;
+            const iframe = document.getElementById('resume-iframe');
+            const url = document.getElementById('resume-url');
+            if (language === 'en') {
+              iframe.src = 'resume/Resume.pdf';
+              url.href = 'resume/Resume.pdf';
+            } else if (language === 'zh') {
+              iframe.src = 'resume/Resume-zh.pdf';
+              url.href = 'resume/Resume-zh.pdf';
+            }
+          });
+        </script>
+        <iframe id="resume-iframe" src="resume/Resume.pdf" width="100%" height="800px"></iframe>
 
     </div>
   </section>
